testdata/baselines/reference/submodule/compiler/jsExportMemberMergedWithModuleAugmentation2.errors.txt
/index.ts(1,19): error TS2306: File '/test.js' is not a module.
/index.ts(3,16): error TS2306: File '/test.js' is not a module.
/test.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== /test.js (1 errors) ====
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
      a: "ok"
    };
    
==== /index.ts (2 errors) ====
    import { a } from "./test";
                      ~~~~~~~~
!!! error TS2306: File '/test.js' is not a module.
    
    declare module "./test" {
                   ~~~~~~~~
!!! error TS2306: File '/test.js' is not a module.
      export const a: number;
    }
    
    a.toFixed();
    